top-margin was off whenever viewed on phone after deploying. Increased margin to ensure no parts of the top of the avatar are cut off for mobile

--- a/assets/style.css
+++ b/assets/style.css
@@ -339,7 +339,7 @@ label #cancel {
         flex-basis: 100%;
         flex-wrap: wrap;
         justify-content: center;
-        margin-top: 60px;
+        margin-top: 110px;
         
     }
     
